<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kz.smartideagroup.pillikan.content.sign_in.SignInFragment"
    android:padding="@dimen/default_padding">


    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textColor="@color/title_text_color"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorization_suggest"
        android:textColor="@color/disable_text"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/default_padding_super"
        android:id="@+id/sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authorization_fragment_phone_til"
            style="@style/ModuleBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:hint="@string/phone_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <kz.smartideagroup.pillikan.common.views.PhoneEditText
                android:id="@+id/authorization_fragment_phone_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authorization_input_password_layout"
            style="@style/ModuleExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:errorIconDrawable="@null"
            app:layout_constraintTop_toBottomOf="@+id/authorization_fragment_phone_til">

            <AutoCompleteTextView
                android:maxLength="10"
                android:id="@+id/authorization_input_password_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/authorization_password"
                android:inputType="numberPassword"
                tools:ignore="LabelFor" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/auth_type_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="@dimen/default_padding"
            android:text="@string/sign_in_type_sms"
            android:textColor="@color/disable_text"
            app:layout_constraintTop_toBottomOf="@+id/authorization_input_password_layout" />

        <TextView
            android:id="@+id/authorization_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_orange_button"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/authorization_confirm"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/auth_type_change_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:gravity="end"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/registration_button"
            android:id="@+id/registration_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_suggest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/main_orange"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/registration_suggest"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>