<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".content.home.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/default_padding_small"
        android:paddingHorizontal="@dimen/default_padding">

        <TextView
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/default_padding_small"
            android:id="@+id/welcome_page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/default_padding_small"
            android:text="@string/nav_home"
            android:textColor="@color/title_text_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/welcome_page_notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/default_padding_small"
            android:src="@drawable/ic_baseline_notifications_24"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_page_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/welcome_page_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_padding_small"
            android:background="@drawable/bg_search_bar"
            app:defaultQueryHint="Поиск"
            app:layout_constraintTop_toBottomOf="@+id/welcome_page_notification_button"
            app:queryHint="Поиск" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/welcome_banners_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintDimensionRatio="343:170"
            app:layout_constraintTop_toBottomOf="@+id/welcome_page_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_categories_container_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/welcome_banners_recycler_view"/>

        <TextView
            android:layout_marginTop="@dimen/default_padding"
            android:id="@+id/welcome_page_new_partners_capture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_new_partners"
            app:layout_constraintTop_toBottomOf="@+id/main_categories_container_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_partners_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@+id/welcome_page_new_partners_capture" />

        <TextView
            android:id="@+id/show_more_partners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_padding"
            android:background="@drawable/bg_orange_button"
            android:gravity="center"
            android:paddingVertical="@dimen/default_padding"
            android:text="@string/see_more_items"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/new_partners_recycler_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>